# ecosim

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  diagram.drawio
include/: argparse.hpp  ecosim.hpp  entity.hpp  exchange.hpp  order_book.hpp  stockpile.hpp  world.hpp
src/: argparse.cpp  ecosim.cpp  entity.cpp  exchange.cpp  order_book.cpp  world.cpp
